<resources>
    <string name="app_name">wsl-services</string>

    <string name="facebook_app_id">261278315787402</string>
    <string name="fb_login_protocol_scheme">fb261278315787402</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registarme">Registrarme</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="sexo">Sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="edad">Edad:</string>
    <string name="perfil">Perfil</string>
    <string name="nivel">Nivel</string>
    <string name="musico">Musico(a)</string>
    <string name="bailarin_a">Bailarin(a)</string>
    <string name="pais">Pais</string>
    <string name="ciudad">Ciudad</string>
    <string name="estado">Estado</string>
    <string name="nombre">Nombre</string>
    <string name="requerido">*Requerido</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="drum_leader">Drum leader</string>
    <string name="director_de_escuela_de_baile">Director de escuela de baile</string>
    <string name="bailarina_solista">Bailarina solista</string>
    <string name="maestra_de_baile">Maestra de baile</string>
    <string name="alumno">Alumno</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_title">Sin titulo</string>
    <string name="title">Title</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="_0_00">0:00</string>
    <string name="subtitle">subtitle</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="correo_no_valido">Correo no valido</string>
    <string name="telefono_no_valido">Telefono no valido</string>


    <!--OPEN PAY-->

    <string name="card_created">Tarjeta registrada correctamente</string>
    <string name="button_save">Guardar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="holder_name">Nombre completo</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="cvv">CVV2</string>
    <string name="info">Información</string>
    <string name="error">Error</string>
    <string name="card_added">Tarjeta registrada</string>
    <string name="invalid_card_number">Número inválido</string>
    <string name="invalid_holder_name">Titular es requerido</string>
    <string name="invalid_cvv">Código de seguridad inválido</string>
    <string name="invalid_expire_date">Fecha de expiracion inválida</string>
    <string name="progress_message">Procesando...</string>
    <string name="declined">La tarjeta fue rechazada</string>
    <string name="expired">La tarjeta ha expirado</string>
    <string name="insufficient_funds">La tarjeta no tiene fondos suficientes</string>
    <string name="stolen_card">La tarjeta ha sido identificada como una tarjeta robada</string>
    <string name="suspected_fraud">La tarjeta ha sido identificada como una tarjeta fraudulenta.</string>
    <string name="communication_error">No se puede establecer comunicacion con el servidor</string>
    <string name="already_exists">La tarjeta ya se encuentra registrada</string>
    <string name="error_creating_card">Ocurrio un error al regitrar la tarjeta</string>


    <string-array name="year_array">
        <item>Año</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>


    <string-array name="month_array">
        <item>Mes</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="add_card">Guardar tarjeta</string>
    <string name="checkout">Generar</string>
    <string name="sessionId">Device session id:</string>
    <string name="getSessionId">Generar device session id</string>
    <string name="card">Tarjeta</string>
    <string name="token">Token</string>
    <string name="todaa_las_fechas">Todaa las fechas</string>
    <string name="no_hay_eventos">No hay eventos.</string>
    <string name="placehlder">Placehlder</string>
    <string name="todas_las_fechas">Todas las fechas</string>
    <string name="hint_searchview_eventlist">Evento, Ciudad, Estado</string>
    <string name="talla">Talla</string>
    <string name="home">Inicio</string>
    <string name="mis_boletos">Mis Boletos</string>
    <string name="vdnder">Vender</string>
    <string name="felicidades">Felicidades</string>
    <string name="direccion_necesaria">Es necesario capturar la direccion de entrega!</string>
    <string name="no_hay_ordenes_pendientes">No hay ordenes pendientes...</string>
    <string name="cartera">Cartera</string>
    <string name="agregar">Agregar</string>
    <string name="wallet">Wallet</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="agregar_tarjeta">Agregar tarjeta</string>
    <string name="agregar_metodo_de_pago">Agregar tarjeta</string>
    <string name="_1234">••••1234</string>
    <string name="efectivo">Efectivo</string>
    <string name="metodos_de_pago">Metodos de pago</string>
    <string name="usar_email">Usar Email</string>
    <string name="repita_su_password">Repita su password</string>
    <string name="contraseña_8_caracteres">El password debe tener al menos 8 caracteres</string>
    <string name="password_debe_ser_similar">El password debe ser similar</string>
    <string name="last_name">Apellidos</string>
    <string name="loading">Cargando</string>
    <string name="intentelo_mas_tarde">Algo sucedio durante la peticion, intentelo mas tarde</string>
    <string name="email_ya_registrado">Este email ya fue registrado</string>
    <string name="or">OR</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="no_existe_cuenta_con_este_correo">No existe una cuenta asociada con este correo</string>
    <string name="desea_crear_cuenta">¿Decea crear una cuenta?</string>
    <string name="cancel">cancelar</string>
    <string name="decline">Decline</string>
    <string name="aceptar">Aceptar</string>
    <string name="email_not_verified">Email no verificado por el proveedor</string>
    <string name="title_no_openpay_account_message">Wallet Account</string>
    <string name="message_no_openpay_account_massage">Hemos visto que tu no has creado tarjetas, ¿deseas crear una cuenta con openPay de BBVA para manejar tus tajetas?</string>
    <string name="province">Provincia</string>
    <string name="address">Direccion</string>
    <string name="postal_code">Codigo Postal</string>
    <string name="phone">Telefono</string>
    <string name="general">General</string>
    <string name="save">Guardar</string>
    <string name="month">mes</string>
    <string name="week">semana</string>
    <string name="year">año</string>
    <string name="message_to_plan_pay">El plan se renovara cada</string>
    <string name="no_pay_message">No pudimos generar el pago, descuide no se a realizado ningun cobro a su cuenta.</string>
    <string name="actions">Acciones</string>
    <string name="log_out">Log out</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cancel_subscription">Cancelar subscripscion</string>
    <string name="policy_privacy">Politica de privacidad</string>
    <string name="no_response_from_server_try_again">No se obtuvo respuesta del servidor, vuelva a intentarlo mas tarde</string>
    <string name="repeat_every">repeat_every</string>
    <string name="trial_days">trial days</string>
    <string name="amount">amount</string>
    <string name="free_version">Free version</string>
    <string name="premium">Premium</string>
    <string name="card_remove_succesfully">Tarjeta removida con exito!</string>


</resources>
