<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments.fragments.SubscriptionFragment"
    android:background="@color/colorWhite"
    >

<!--    val name: String,-->
<!--    val amount: String,-->
<!--    val creation_date: String,-->
<!--    val repeat_every: String,-->
<!--    val repeat_unit: String,-->
<!--    val retry_times: String,-->
<!--    val status: String,-->
<!--    val status_after_retry: String,-->
<!--    val trial_days: String,-->
<!--    val currency: String-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_card"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/name_"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/repeat_unit_text_"
        app:layout_constraintEnd_toEndOf="@+id/image_card"
        app:layout_constraintStart_toStartOf="@+id/image_card"
        app:layout_constraintTop_toBottomOf="@+id/image_card" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/repeat_unit_text_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repeat_every"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/trial_days_option_"
        app:layout_constraintEnd_toEndOf="@+id/image_card"
        app:layout_constraintStart_toStartOf="@+id/image_card"
        app:layout_constraintTop_toBottomOf="@+id/name_" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/trial_days_option_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/trial_days"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/amount_"
        app:layout_constraintEnd_toEndOf="@+id/image_card"
        app:layout_constraintStart_toStartOf="@+id/image_card"
        app:layout_constraintTop_toBottomOf="@+id/repeat_unit_text_" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amount_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/image_card"
        app:layout_constraintStart_toStartOf="@+id/image_card"
        app:layout_constraintTop_toBottomOf="@+id/trial_days_option_" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_subscription_"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel_subscription"
        android:textSize="8sp"

        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>